[package]
name = "il2-ilint"
version = "1.0.0"
description = "InterlockLedger's ILInt implementation in Rust."
authors = ["InterlockLedger Network", "Fabio Jun Takada Chino", "Cesar Luiz Ferracin"]
edition = "2018"
license-file = "LICENSE"
keywords = ["interlockledger", "blockchain"]
categories = ["cryptography::cryptocurrencies", "encoding", "no-std"]

[dependencies]
